--- a/pom.xml
+++ b/pom.xml
@@ -61,9 +61,14 @@
 
 	<repositories>
 		<repository>
-			<id>dv8tion</id>
-			<name>m2-dv8tion</name>
-			<url>https://m2.dv8tion.net/releases</url>
+		    <id>central</id>
+		    <name>Central Repository</name>
+		    <url>https://repo.maven.apache.org/maven2</url>
+		</repository>
+		<repository>
+		    <id>dv8tion</id>
+		    <name>m2-dv8tion</name>
+		    <url>https://m2.dv8tion.net/releases</url>
 		</repository>
 	</repositories>
 
