--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 		<dependency>
 			<groupId>net.dv8tion</groupId>
 			<artifactId>JDA</artifactId>
-			<version>4.4.0_350</version>
+			<version>5.0.0-beta.8</version>
 			<exclusions>
 				<exclusion>
 					<groupId>club.minnced</groupId>
@@ -64,11 +64,6 @@
 		    <id>central</id>
 		    <name>Central Repository</name>
 		    <url>https://repo.maven.apache.org/maven2</url>
-		</repository>
-		<repository>
-		    <id>dv8tion</id>
-		    <name>m2-dv8tion</name>
-		    <url>https://m2.dv8tion.net/releases</url>
 		</repository>
 	</repositories>
 
